fix: settings background dark mode

--- a/src/main/resources/de/uniks/beastopia/teaml/views/dark.css
+++ b/src/main/resources/de/uniks/beastopia/teaml/views/dark.css
@@ -94,6 +94,7 @@
 #chatList,
 #regionList,
 .region-cell,
+#vboxKeybindings,
 #chatScrollPane .viewport {
     -fx-background-color: #666666;
 }
